examples/kubernetes/src/main/resources/with-ingress/ingress-ui.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: apicurio-studio-ui
  labels:
    app: apicurio-studio
spec:
  rules:
    - host: HOST_UI
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: apicurio-studio-ui
                port:
                  name: http
